--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "coverage": "react-app-rewired test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "jest": {
@@ -29,7 +30,13 @@
     ],
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/src/$1"
-    }
+    },
+    "collectCoverageFrom": [
+      "!src/index.js",
+      "!src/components/TechList/index2.js",
+      "!src/services/api.js"
+    ],
+    "coverageDirectory": "__tests__/coverage"
   },
   "browserslist": {
     "production": [
