--- a/react-native-testes/package.json
+++ b/react-native-testes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNative",
+  "name": "react-native-testes",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,6 +15,8 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@testing-library/react-native": "^4.0.7",
+    "@types/jest": "^24.0.16",
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
@@ -22,6 +24,16 @@
     "react-test-renderer": "16.8.6"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "@testing-library/react-native",
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "!src/services/api.js"
+    ],
+    "coverageDirectory": "__tests__/coverage",
+    "moduleNameMapper": {
+      "^~/(.*)": "<rootDir>/src/$1"
+    }
   }
 }
