--- a/react-native-testes/package.json
+++ b/react-native-testes/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@testing-library/jest-native": "^3.0.2",
     "@testing-library/react-native": "^4.0.7",
     "@types/jest": "^24.0.16",
     "babel-jest": "^24.8.0",
@@ -25,6 +26,9 @@
   },
   "jest": {
     "preset": "@testing-library/react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "testMatch": [
       "**/__tests__/**/*.test.js"
     ],
